--- a/views/about.html
+++ b/views/about.html
@@ -22,7 +22,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <span class="navbar-brand" href="#">WEB322 - Assignment Template</span>
+          <span class="navbar-brand" href="#">BTI325 - Manualla Kurkeice</span>
         </div>
     
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -32,8 +32,8 @@
             <li class="active"><a href="/about">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Link 3</a></li>
-            <li><a href="#">Link 4</a></li>            
+            <li><a href="/posts">Posts</a></li>
+            <li><a href="/categories">Categories</a></li>            
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -42,7 +42,7 @@
       <div class="row">
         <section class="main col-md-9">
           <article>
-          <h2>Left Column</h2>
+          <h2>About</h2>
           <p>Welcome to my Blog! Here, you'll explore a variety of my thoughts and interests while witnessing my experience expand in the world of IT Development.</p>
           <p>I have a wide range of interests that include arts like sketching in realism style, taking and editing photos, and makeup. When I was in highschool until first year 
             college, I was a freelance makeup artist doing all kinds of looks like bridal, prom, graduation photos, new years, birthday, nighttime and daytime glam, and more.
@@ -56,9 +56,10 @@
           </article>
         </section>
         <aside class="col-md-3">
-          <h2>Right Column</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam accumsan libero a sem venenatis pharetra.</p>
+          <h2>Coming Soon</h2>
+          <p>Stay tuned for more updates and thoughts!</p>
         </aside>
+
       </div>
     </div>
 
