--- a/views/about.html
+++ b/views/about.html
@@ -43,16 +43,30 @@
         <section class="main col-md-9">
           <article>
           <h2>About</h2>
-          <p>Welcome to my Blog! Here, you'll explore a variety of my thoughts and interests while witnessing my experience expand in the world of IT Development.</p>
+          <p>Welcome to my Blog! Here, you'll explore a variety of my thoughts and interests while witnessing my experience expand in the world of Software Development.</p>
           <p>I have a wide range of interests that include arts like sketching in realism style, taking and editing photos, and makeup. When I was in highschool until first year 
             college, I was a freelance makeup artist doing all kinds of looks like bridal, prom, graduation photos, new years, birthday, nighttime and daytime glam, and more.
+          </p>
+
+          <p>
             Around the same time I took part in a hobby I hadn't done since elementary school, skateboarding. In the past all I did was cruise around with my friends in our residential
             until later I decided to build my own board and learn tricks. Before COVID hit, I learnt to do a short ollie and pop shuvit. Afterwards, COVID hit and that hobby died (for now) 
-            and , a year later, I completed my diploma at Humber Polytechnic in Computer Programming. 
+            and , a year later, I completed my diploma at Humber Polytechnic (at the time 'College') in Computer Programming. Before enrolling into Software Development at Seneca Polytechnic, I worked 
+            at The Home Depot for a year to save some money. I still am an employee and I've worked for Home Depot for over 2 years now but I am currently taking an LOA for this school year and will
+            be back with my Home Depot family before the summer starts. 
           </p>
-          <p>Ut non diam varius ante dictum blandit nec in tortor. Pellentesque sodales vel elit eget cursus. In condimentum consequat mauris vel bibendum. Curabitur feugiat nibh in sodales condimentum. In sit amet hendrerit massa, sed porta ipsum. Praesent consectetur consectetur sem, at aliquam ante posuere ac. Sed sit amet quam egestas eros lobortis varius. Aenean eleifend nec turpis eget faucibus. Duis pretium consequat velit, quis eleifend leo laoreet non. Quisque sit amet lobortis urna. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In nisi nibh, convallis eu metus et, adipiscing laoreet quam.</p>
-          <p>Duis egestas cursus diam, ut volutpat tortor mattis tempor. In et imperdiet turpis. Proin aliquet, lectus ultrices fringilla lobortis, purus risus imperdiet neque, eget consectetur ligula quam non arcu. Curabitur vitae posuere elit, in faucibus felis. Suspendisse vitae nisl eget ligula condimentum bibendum in ut nulla. Etiam non lacinia turpis. Aliquam placerat est vestibulum turpis pretium elementum. Integer pharetra gravida massa, at aliquam turpis pulvinar sit amet. Nam a lectus sed mauris suscipit commodo a non ipsum. Aenean dapibus porttitor massa vitae auctor. Donec quis ultricies orci. Etiam semper, lectus vitae tristique ullamcorper, risus lectus semper nulla, quis accumsan sem leo at neque.</p>
-          <p>Nullam vulputate lectus at nisi euismod, nec consectetur lorem elementum. Vestibulum id justo metus. Etiam id lacinia nulla. Fusce aliquet convallis mauris iaculis iaculis. Suspendisse et eleifend tortor. Nunc non tincidunt lorem. Integer consectetur magna felis, vel mattis diam varius id. Morbi elementum semper purus, nec ullamcorper neque mattis in. Nulla facilisi. Vivamus mollis justo eget urna bibendum sodales.</p>
+          <p>
+            Another interest I have are cars. I've grown up around cars because my dad is a somewhat car guy. He is a classic car guy and he currently has 5 in his collection. His collection
+            since the 80s has alternated between many American cars but the one car he has had since immigrating to Canada until now is the 1987 Datsun 280zx. He has sold his 280zx multiple times and 
+            bought a new one because he can not truly let go of the significance of that car. I am next in line to inherit the car (because my brothers don't care about cars) but the reason I purchased
+            my own car was because I need a more fixable and reliable car while I travel to and from school (ig: vesl0wster). In relation to the 280zx, since growing up with that car, I had developed a dream
+            own a Z in the future as well. The difference is it is a newer generation than the 280zx, my favourite generation Z is the 2008 350z; specificially the 2008 350z nismo HR. If you were to ask,
+            I believe all the generational Zs are great except the 370z (in terms of cosmetics) and if the 350z had the 370z interior, it'd be unbeatable.
+          </p>
+          <p>
+            Currently, while being a student at Seneca Polytechnic, I am exploring my old hobbies again like makeup and thinking of ways I can intertwine tech and beauty. I have a few ideas
+            that I am laying out currently and hopefully throughout the course of my studies I can elevate my plan.
+          </p>          
           </article>
         </section>
         <aside class="col-md-3">
