--- a/views/about.html
+++ b/views/about.html
@@ -7,7 +7,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <!-- Latest compiled and minified Bootstrap 3.4.1 CSS -->
       <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous"> -->      
-      <link rel="stylesheet" href="https://bootswatch.com/3/journal/bootstrap.min.css">
+      <link rel="stylesheet" href="https://bootswatch.com/3/readable/bootstrap.min.css">
       
       <title>About</title>
   </head>
@@ -60,7 +60,7 @@
             since the 80s has alternated between many American cars but the one car he has had since immigrating to Canada until now is the 1987 Datsun 280zx. He has sold his 280zx multiple times and 
             bought a new one because he can not truly let go of the significance of that car. I am next in line to inherit the car (because my brothers don't care about cars) but the reason I purchased
             my own car was because I need a more fixable and reliable car while I travel to and from school (ig: vesl0wster). In relation to the 280zx, since growing up with that car, I had developed a dream
-            own a Z in the future as well. The difference is it is a newer generation than the 280zx, my favourite generation Z is the 2008 350z; specificially the 2008 350z nismo HR. If you were to ask,
+            own a Z in the future as well. The difference is it is a newer generation than the 280zx, my favourite generation Z is the 2008 Nissan 350z; specificially the 2008 350z nismo HR. If you were to ask,
             I believe all the generational Zs are great except the 370z (in terms of cosmetics) and if the 350z had the 370z interior, it'd be unbeatable.
           </p>
           <p>
