--- a/views/about.html
+++ b/views/about.html
@@ -7,7 +7,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <!-- Latest compiled and minified Bootstrap 3.4.1 CSS -->
       <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous"> -->      
-      <link rel="stylesheet" href="https://bootswatch.com/3/paper/bootstrap.min.css">
+      <link rel="stylesheet" href="https://bootswatch.com/3/flatly/bootstrap.min.css">
       
       <title>About</title>
   </head>
