--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -2,13 +2,13 @@
     <section class="main col-md-9">
         {{#if data.posts}}
         <article>
-            <h2>{{data.post.title}}</h2>
-            <img src="{{data.post.featureImage}}" alt="feature Image" style="width:100%" />
+            <h2>{{data.posts.title}}</h2>
+            <img src="{{data.posts.featureImage}}" alt="feature Image" style="width:100%" />
             <br /><br />
-            {{#safeHTML data.post.body}}{{/safeHTML}}
+            {{#safeHTML data.posts.body}}{{/safeHTML}}
             <br /><br />
-            <strong>Category:</strong>{{data.post.category}}<br />
-            <strong>Last Updated:</strong>{{data.post.postDate}}
+            <strong>Category:</strong>{{data.posts.category}}<br />
+            <strong>Last Updated:</strong>{{data.posts.postDate}}
         </article>
         {{else}}
             <div class="col-md-12 text-center">
@@ -25,11 +25,13 @@
             {{#each data.posts}}
                 <a href="/blog/id?category={{../viewingCategory}}" class="list-group-item">{{title}}</a>
             {{/each}}
-        </ul>       
+        </ul>      
+        {{/if}} 
+        {{#if data.categories}}
         <h4>Categories</h4>
         <ul class="list-group">
             {{#each data.posts}}
-                <a href="/blog/id?category={{id}}" class="list-group-item">{{category}}</a>
+                <a href="/blog/id?category=id" class="list-group-item">{{category}}</a>
             {{/each}}
         </ul>
         {{/if}}
