--- a/views/addPost.hbs
+++ b/views/addPost.hbs
@@ -1,4 +1,3 @@
-
 <div class="container" style="padding-top:60px">
   <div class="row">
     <div class="col-md-12">
@@ -38,13 +37,16 @@
                     <div class="col-md-6">
                         <div class="form-group">
                             <label for="category">Category:</label>
+                            {{#if categories}}
                             <select class="form-control" name="category" id="category">
-                              <option value="1">Technology</option>
-                              <option value="2">Gaming</option>
-                              <option value="3">Fashion</option>
-                              <option value="4">Education</option>
-                              <option value="5">Wellness</option>
-                            </select> 
+                                <option value="">Select Category</option>
+                                {{#each categories}}
+                                <option value="{{id}}">{{category}}</option>
+                                {{/each}}
+                            </select>
+                            {{else}}
+                            <div>No Categories</div>
+                            {{/if}}
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -61,8 +63,8 @@
             </fieldset>
             <hr>
             <input type="submit" class="btn btn-primary pull-right" value="Add Post">
-            <br><br><br>    
+            <br><br><br>
         </form>
     </div>
   </div>
-</div>  
+</div>
