--- a/views/categories.hbs
+++ b/views/categories.hbs
@@ -1,6 +1,8 @@
 <div class="row">
     <div class="col-md-12">
-        <h2>Categories</h2>
+        <h2>Categories
+            <a href="/categories/add" class="btn btn-success pull-right">Add Category</a>
+        </h2>        
         <hr />        
             <div class="table-responsive">
                 <table class="table">
@@ -8,6 +10,7 @@
                     <tr>
                         <th>Category ID</th>
                         <th>Category Name</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -15,11 +18,14 @@
                     <tr>
                         <td><a href="/posts?category={{id}}">{{id}}</a></td>
                         <td><a href="/posts?category={{category}}">{{category}}</a></td>
+                        <td>
+                            <a href="/categories/delete/{{id}}" class="btn btn-danger">remove</a>
+                        </td>
                     </tr>
                     {{/each}}
                 </tbody>
                 </table>
-                {{#unless posts}}
+                {{#unless categories}}
                     <div class="col-md-12 text-center">
                         <strong>{{message}}</strong>
                     </div>
