--- a/views/posts.hbs
+++ b/views/posts.hbs
@@ -1,6 +1,8 @@
 <div class="row">
     <div class="col-md-12">
-        <h2>Posts</h2>
+        <h2>Posts
+             <a href="/posts/add" class="btn btn-success pull-right">Add Post</a>
+        </h2>
         <hr />            
         <div class="table-responsive">
             <table class="table">
@@ -14,13 +16,16 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {{#each posts}} 
+                    {{#each posts}}
                     <tr>
                         <td>{{id}}</td>
                         <td>{{title}}</td>
                         <td>{{#formatDate postDate}}{{/formatDate}}</td>
                         <td><a href="/posts?category={{category}}">{{category}}</a></td>
                         <td>{{published}}</td>
+                        <td>
+                            <a href="/posts/delete/{{id}}"class="btn btn-danger">remove</a>
+                        </td>
                     </tr>
                     {{/each}}
                 </tbody>              
