--- a/views/categories.hbs
+++ b/views/categories.hbs
@@ -1,35 +1,33 @@
 <div class="row">
     <div class="col-md-12">
-        <h2>Categories
-            <a href="/categories/add" class="btn btn-success pull-right">Add Category</a>
-        </h2>        
-        <hr />        
-            <div class="table-responsive">
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th>Category ID</th>
-                        <th>Category Name</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {{#each categories}} 
-                    <tr>
-                        <td><a href="/posts?category={{id}}">{{id}}</a></td>
-                        <td><a href="/posts?category={{category}}">{{category}}</a></td>
-                        <td>
-                            <a href="/categories/delete/{{id}}" class="btn btn-danger">remove</a>
-                        </td>
-                    </tr>
-                    {{/each}}
-                </tbody>
-                </table>
-                {{#unless categories}}
-                    <div class="col-md-12 text-center">
-                        <strong>{{message}}</strong>
-                    </div>
-                {{/unless}}
-            </div>            
+          <h2>Categories <a href="/categories/add" class="btn btn-success pull-right">Add Category</a></h2>
+          <hr />
+
+          <div class="table-responsive">
+        <table class="table ">
+            <thead>
+            <tr>
+                <th>Category ID</th>
+                <th>Category Name</th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            {{#each categories}}
+                <tr>
+                    <td><a href="/posts?category={{id}}">{{id}}</a></td>
+                    <td><a href="/posts?category={{id}}">{{category}}</a></td>
+                    <td><a class="btn btn-danger" href="/categories/delete/{{id}}">remove</a></td>
+                </tr>
+            {{/each}}
+            </tbody>
+        </table>
+        </div>
+
     </div>
+    {{#unless categories}}
+    <div class="col-md-12 text-center">
+        <strong>{{message}}</strong>
+    </div>
+    {{/unless}}
 </div>
