--- a/views/about.hbs
+++ b/views/about.hbs
@@ -16,12 +16,11 @@
         be back with my Home Depot family before the summer starts. 
       </p>
       <p>
-        Another interest I have are cars. I've grown up around cars because my dad is a somewhat car guy. He is a classic car guy and he currently has 5 in his collection. His collection
+        Another interest I have are cars. I've grown up around cars because my dad is a somewhat car guy. He is a classic car guy. His collection
         since the 80s has alternated between many American cars but the one car he has had since immigrating to Canada until now is the 1987 Datsun 280zx. He has sold his 280zx multiple times and 
-        bought a new one because he can not truly let go of the significance of that car. I am next in line to inherit the car (because my brothers don't care about cars) but the reason I purchased
-        my own car was because I need a more fixable and reliable car while I travel to and from school. In relation to the 280zx, since growing up with that car, I had developed a dream
-        own a Z in the future as well. The difference is it is a newer generation than the 280zx, my favourite generation Z is the 2008 Nissan 350z; specificially the 2008 350z nismo HR. If you were to ask,
-        I believe all the generational Zs are great except the 370z (in terms of cosmetics) and if the 350z had the 370z interior, it'd be unbeatable.
+        bought a new one because he can not truly let go of the significance of that car. I am next in line to inherit the car but I purchased
+        my own car because I need a more fixable and reliable car while I travel to and from school. In relation to the 280zx, since growing up with that car, I had developed a dream
+        own a Z in the future as well. 
       </p>
       <p>
         Currently, while being a student at Seneca Polytechnic, I am exploring my old hobbies again like makeup and thinking of ways I can intertwine tech and beauty. I have a few ideas
